; ModuleID = '/home/carl/AnghaBench/kphp-kdb/lists/extr_lists-data.c_init_hash_table.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/lists/extr_lists-data.c_init_hash_table.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LISTS_PRIME = common dso_local global i32 0, align 4
@lists_prime = common dso_local global i32 0, align 4
@List = common dso_local global i32 0, align 4
@max_lists = common dso_local global double 0.000000e+00, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @init_hash_table(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = sitofp i32 %3 to double
  %5 = fmul double %4, 1.500000e+00
  %6 = fptosi double %5 to i32
  store i32 %6, i32* %2, align 4
  %7 = load i32, i32* %2, align 4
  %8 = load i32, i32* @LISTS_PRIME, align 4
  %9 = icmp sle i32 %7, %8
  br i1 %9, label %10, label %12

10:                                               ; preds = %1
  %11 = load i32, i32* @LISTS_PRIME, align 4
  br label %14

12:                                               ; preds = %1
  %13 = load i32, i32* %2, align 4
  br label %14

14:                                               ; preds = %12, %10
  %15 = phi i32 [ %11, %10 ], [ %13, %12 ]
  %16 = call i32 @am_choose_hash_prime(i32 %15)
  store i32 %16, i32* @lists_prime, align 4
  %17 = load i32, i32* @lists_prime, align 4
  %18 = sext i32 %17 to i64
  %19 = mul i64 %18, 8
  %20 = trunc i64 %19 to i32
  %21 = call i32 @malloc(i32 %20)
  store i32 %21, i32* @List, align 4
  %22 = load i32, i32* @List, align 4
  %23 = load i32, i32* @lists_prime, align 4
  %24 = sext i32 %23 to i64
  %25 = mul i64 %24, 8
  %26 = trunc i64 %25 to i32
  %27 = call i32 @memset(i32 %22, i32 0, i32 %26)
  %28 = load i32, i32* @lists_prime, align 4
  %29 = sitofp i32 %28 to double
  %30 = fmul double 0x3FE6666666666666, %29
  store double %30, double* @max_lists, align 8
  ret void
}

declare dso_local i32 @am_choose_hash_prime(i32) #1

declare dso_local i32 @malloc(i32) #1

declare dso_local i32 @memset(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
